--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,25 @@
-<!-- This content will be injected into the {{{body}}} placeholder of your main layout -->
-<h1>Welcome to The Tech Blog</h1>
-<!-- Add more page-specific content here -->
+{{!-- views/homepage.handlebars --}}
+
+{{#if loggedIn}}
+  <nav>
+    <a href="/">Home</a>
+    <a href="/dashboard">Dashboard</a>
+    <a href="/logout">Logout</a>
+  </nav>
+{{else}}
+  <nav>
+    <a href="/">Home</a>
+    <a href="/login">Login</a>
+    <a href="/signup">Sign Up</a>
+  </nav>
+{{/if}}
+
+<h1>The Tech Blog</h1>
+
+{{#each posts}}
+  <div class="post">
+    <h2>{{this.title}}</h2>
+    <p>{{this.content}}</p>
+    <p>Posted by {{this.user.username}} on {{this.createdAt}}</p>
+  </div>
+{{/each}}
