--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,25 +1,30 @@
 {{!-- views/homepage.handlebars --}}
 
-{{#if loggedIn}}
-  <nav>
-    <a href="/">Home</a>
+<header>
+  <h1>The Tech Blog</h1>
+</header>
+
+<nav>
+  <a href="/">Home</a>
+  {{#if loggedIn}}
     <a href="/dashboard">Dashboard</a>
     <a href="/logout">Logout</a>
-  </nav>
-{{else}}
-  <nav>
-    <a href="/">Home</a>
+  {{else}}
     <a href="/login">Login</a>
     <a href="/signup">Sign Up</a>
-  </nav>
-{{/if}}
+  {{/if}}
+</nav>
 
-<h1>The Tech Blog</h1>
+<div class="container">
+  {{#each posts}}
+    <div class="post">
+      <h2>{{this.title}}</h2>
+      <p>{{this.content}}</p>
+      <p class="post-metadata">Posted by {{this.user.username}} on {{this.createdAt}}</p>
+    </div>
+  {{/each}}
+</div>
 
-{{#each posts}}
-  <div class="post">
-    <h2>{{this.title}}</h2>
-    <p>{{this.content}}</p>
-    <p>Posted by {{this.user.username}} on {{this.createdAt}}</p>
-  </div>
-{{/each}}
+<footer>
+  <p>&copy; 2024 The Tech Blog</p>
+</footer>
