--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,22 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  {{{body}}}
+  <header>
+    <h1>The Tech Blog</h1>
+  </header>
+  <nav>
+    <a href="/">Home</a>
+    {{#if loggedIn}}
+      <a href="/dashboard">Dashboard</a>
+      <a href="/logout">Logout</a>
+    {{else}}
+      <a href="/login">Login</a>
+      <a href="/signup">Sign Up</a>
+    {{/if}}
+  </nav>
+  <div class="container">
+    {{{body}}}
+  </div>
+  <script src="/js/script.js"></script>
 </body>
 </html>
