--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{title}}</title>
-  <link rel="stylesheet" href="/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{title}}</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  <header>
-    <h1>The Tech Blog</h1>
-  </header>
-  <nav>
-    <a href="/">Home</a>
-    {{#if loggedIn}}
-      <a href="/dashboard">Dashboard</a>
-      <a href="/logout">Logout</a>
-    {{else}}
-      <a href="/login">Login</a>
-      <a href="/signup">Sign Up</a>
-    {{/if}}
-  </nav>
-  <div class="container">
+    <nav>
+        <a href="/">Home</a>
+        {{#if loggedIn}}
+            <a href="/dashboard">Dashboard</a>
+            <a href="/logout" id="logout-link">Logout</a>
+        {{else}}
+            <a href="/login">Login</a>
+            <a href="/signup">Sign Up</a>
+        {{/if}}
+    </nav>
     {{{body}}}
-  </div>
-  <script src="/js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
